trunk/Archive2/67/f23635c4eae127/output
main.cpp: In member function 'some& some::operator=(some)':
main.cpp:78:48: error: invalid initialization of non-const reference of type 'some&' from an rvalue of type 'void'
  some &operator=(some s) { return swap(*this, s); }
                                                ^
main.cpp:78:51: warning: control reaches end of non-void function [-Wreturn-type]
  some &operator=(some s) { return swap(*this, s); }
                                                   ^
